# FESTIM

./: .gitignore  .readthedoc.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  FESTIM.ps1  LICENSE  README.md  Test_Henry.py  Test_Sieverts.py  benchmark.py  cas_test_ITER.py  cas_test_ITER_simple.py  codecov.yml  convergence_rates.py  discontinuity_generic.py  example_reaction_interface.py  example_usage.py  first_try.py  hodille.tar  hodille_2022_data.csv  interface_trapping.py  multi_isotope_trapping_example.py  mwe.py  mwe_dis.py  mwe_time_dependent_trap.py  openfoam-example.ipynb  plot_hodille.py  plot_tds.py  problem.py  project.toml  pyproject.toml  setup.cfg  surface_reaction_example.py  tds_example.py  test.py  test_change_of_variable.py  test_implementation.py  test_implementation_2.py  test_implementation_3.py  (+4 more)
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: add-institution.yml  bug-report.md
.github/scripts/: add_institution.py
.github/workflows/: add-institution.yml  benchmark.yml  ci.yml  ci_conda.yml  ci_docker.yml  code_formatting.yml  conda-nightly.yml  conda_ci.yml  ct.yml  docker_ci.yml  doctest.yml  pep8_check.yml  python-publish.yml  test_demos.yml
Cas_test_ITER/: Monoblock_quadrangles.py  cas_test_ITER.py  cas_test_ITER_simple.py  context.py  difference.py  export_T_profiles.py  export_solute_profiles.py  export_trap_profiles.py  parameters.py  plot_derived_quantities.py  plot_profiles.py  postOctave.m  postParaview.py  post_ttt.py
Cas_test_ITER/maillages/: Monoblock_quadrangles.py  README.txt  Study1.hdf  convert_mesh_quadrangle.py  convert_mesh_triangle.py  monoblock_triangle2.py
Cas_test_solubility/: cas_test_solubility.py  context.py  parameters_solubility.py
FESTIM/: __init__.py  boundary_conditions.py  concentration.py  export.py  formulations.py  functionspaces_and_functions.py  generic_simulation.py  h_transport_problem.py  helpers.py  initial_condition.py  initialise_solutions.py  initialising.py  materials.py  meshing.py  mobile.py  post_processing.py  post_prosecco  settings.py  solving.py  source.py  stepsize.py  temperature.py  temperature_solver.py  theta.py  traps.py
FESTIM/boundary_conditions/: boundary_condition.py  boundary_conditions.py  flux_bc.py  recombination_flux.py
FESTIM/concentration/: concentration.py  mobile.py  theta.py
FESTIM/exports/: derived_quantities_export.py  error.py  exports.py  trap_density_xdmf.py  txt_export.py  xdmf_export.py
FESTIM/materials/: material.py  materials.py
FESTIM/meshing/: mesh.py  mesh_1d.py  mesh_from_refinements.py  mesh_from_vertices.py  mesh_from_xdmf.py
FESTIM/sources/: source.py  source_implantation_flux.py
FESTIM/temperature/: temp_from_xdmf.py  temperature.py  temperature_from_xdmf.py  temperature_solver.py
FESTIM/traps/: extrinsic_trap.py  trap.py  traps.py
FESTIM_SurfKin_impl/: HTi.ipynb  HTi.py
FESTIM_SurfKin_impl/exp_data/: 450.csv
FESTIM_SurfKin_impl/test/: derived_quantities_expl_723.csv  derived_quantities_expl_773.csv  derived_quantities_expl_873.csv  derived_quantities_impl_723.csv  derived_quantities_impl_773.csv  mobile.h5  mobile.xdmf  (+3 more)
Maillages monoblock/: Mesh 6.rar  Study1.hdf  convert_mesh.py  halfmonoblock.py
Main/: FESTIM.py  MMS.py  desorption.csv  desorption1e22.csv  desorption1e23.csv  plot.py  plot_input.py  script.py  test.py  trappin_strong_coupling.py  ttrap.py
Optimisation/: context.py  create_data.py  create_error_data.py  create_noisy_data.py  optimisation_TDS.py  plot.py
Optimisation_noise/: optimisation_TDS.py  plot.py  plot_cost_function.py
Solution_ogorodnikova/: derived_quantities.csv  retention.xdmf  solute.xdmf  trap_1.xdmf  trap_2.xdmf  trap_3.xdmf
Tests/: test.py  test_boundary_conditions.py  test_formulation.py  test_henry.py  test_initialisation.py  test_integration.py  test_integration_initialisation_export.py  test_meshing.py  test_postprocessing.py  test_postprocessing_UT.py  test_postprocessing_integration.py  test_system.py
demos/: demo_Ogorodnikova.ipynb  demo_Soret.py  demo_coupled_heat_transfer.ipynb  demo_derived_quantities.ipynb  demo_meshes.ipynb  demo_multi_materials.ipynb  demo_read_xdmf.ipynb
docs/: conf.py  environment.yml  index.rst  make_docs_from_rst.sh  requirements.txt
examples/: advection_diffusion_multi_material.py  convergence_rates.py  multi_isotope_trapping_example.py  multi_material_1d.py  multi_material_2d.py  multi_material_2d_bis.py  multi_material_transient.py  multi_material_with_one_material.py  surface_reaction_example.py  tds_example.py  trapping_example.py
festim/: __init__.py  _version.py  generic_simulation.py  h_transport_problem.py  heat_transfer_problem.py  helpers.py  helpers_discontinuity.py  hydrogen_transport_problem.py  initial_condition.py  material.py  nonlinear_problem.py  problem.py  reaction.py  settings.py  source.py  species.py  stepsize.py  trap.py
maillage_monoblock/: mesh_boundaries.h5  mesh_domains.h5
monoblock_1D/: sim_monoblock_1D.py  sim_monoblock_1D_dirichlet.py
new scripts/: convert_mesh.py  sim_monoblock.py
test/: benchmark.py  test_advection.py  test_average_surface.py  test_average_volume.py  test_complex_reaction.py  test_coupled_heat_hydrogen_problem.py  test_derived_quantities.py  test_dirichlet_bc.py  test_example.py  test_flux_bc.py  test_h_transport_problem.py  test_heat_transfer_problem.py  test_helpers.py  test_henrysbc.py  test_initial_condition.py  test_material.py  test_maximum_surface.py  test_maximum_volume.py  test_mesh.py  test_minimum_surface.py  test_minimum_volume.py  test_mms.py  test_multispecies_problem.py  test_permeation_problem.py  test_plot.py  test_profile.py  test_profile1Dexport.py  test_reaction.py  test_settings.py  test_sievertsbc.py  test_source.py  test_species.py  test_stepsize.py  test_subdomains.py  test_surface_flux.py  test_surface_quantity.py  test_surface_temperature.py  test_system.py  test_temperature.py  test_time_depenent_objects.py  (+5 more)
tutorials/: demo_Ogorodnikova.ipynb  demo_multi_materials.ipynb
(+636 files in other folders)
