[build-system]
requires = ["setuptools >= 61", "wheel", "setuptools-scm[toml] >= 7.0.5"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Remi Delaporte-Mathurin" },
    { email = "rdelaportemathurin@gmail.com" },
]
dynamic = ["version"]
name = "FESTIM"
description = "Finite element simulations of hydrogen transport"
readme = "README/md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["tqdm", "scifem>=0.2.8"]
classifiers = [
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest >= 5.4.3", "pytest-cov", "sympy"]
lint = ["ruff", "mypy"]
docs = ["sphinx"]

[project.urls]
Homepage = "https://github.com/RemDelaporteMathurin/FESTIM"
Issues = "https://github.com/RemDelaporteMathurin/FESTIM/issues"


[tool.setuptools_scm]
write_to = "festim/_version.py"

[tool.ruff]
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort - use standalone isort
    "RUF",    # Ruff-specific rules
    "UP",     # pyupgrade
    "ICN",    # flake8-import-conventions
    "NPY",    # numpy-specific rules
    "FLY",    # use f-string not static joins
    "NPY201", # numpy 2.x ruleset
]
ignore = ["UP007", "RUF012"]
allowed-confusables = ["σ"]

[tool.ruff.lint.isort]
known-first-party = ["festim", "basix", "dolfinx", "ffcx", "ufl"]
known-third-party = ["gmsh", "numba", "numpy", "pytest", "pyvista", "pyamg"]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
