[build-system]
requires = [
    "setuptools >= 45",
    "wheel",
    "setuptools_scm[toml] >= 7.0.5"
]
build-backend = "setuptools.build_meta"

[project]
name = "festim"
authors = [
    {name = "Remi Delaporte-Mathurin", email = "rdelaportemathurin@gmail.com"},
]
description = "Finite element simulations of hydrogen transport"
license = {file = "LICENSE"}
classifiers = [
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest>=5.4.3"]

[project.urls]
Repository = "https://github.com/festim-dev/FESTIM"
Issues = "https://github.com/festim-dev/FESTIM/issues"

[tool.setuptools_scm]
write_to = "festim/_version.py"
