

[metadata]
name = FESTIM
author = Remi Delaporte-Mathurin
author_email = rdelaportemathurin@gmail.com
description = Finite element simulations of hydrogen transport
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RemDelaporteMathurin/FESTIM
license = Apache-2.0
license_file = LICENSE
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/RemDelaporteMathurin/FESTIM
    Tracker = https://github.com/RemDelaporteMathurin/FESTIM/issues

[options]
packages = find:
python_requires= >=3.6
install_requires =
    tqdm

[options.extras_require]
test = 
    pytest >= 5.4.3
    pytest-cov
